# WeatherPy

./: .gitignore  README.md  pyproject.toml
weatherpy/: __init__.py  weatherpy.py
weatherpy/api/live/: live.py
weatherpy/api/short_term/: shortTerm.py
weatherpy/fullscreen/: fullscreen.py
weatherpy/table/: live.py  shortTermForecast.py
weatherpy/tools/: config.py  translator.py
